やり方は一つじゃない - TMTOWTDIを追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,3 +6,6 @@ Perlってどんなプログラミング言語なの。Perlに対する純粋な
 
 <h3>Perlに対する誤解に答える</h3>
 
+<ul>
+  <li><a href="/blog/20190911130832.html">やり方は一つじゃない - TMTOWTDI</a>
+</ul>
