--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,11 @@ Perlってどんなプログラミング言語なの。Perlに対する純粋な
 
 <h3>Perlに対する誤解に答える</h3>
 
+Perlは、非常に誤解されている言語です。
+
+率直で、誠実な、学生、研究者、エンジニア、Web製作者、開発マネージャー、経営者の皆様と、誤解され続けているPerlユーザーのために、Perlの誤解を解くコンテンツを書いていきます。
+
 <ul>
   <li><a href="/blog/20190911130832.html">やり方は一つじゃない - TMTOWTDI</a>
+  <li><a href="/blog/20190918081634.html">PerlでもマルチCPUを最大限に活用できる</a>
 </ul>
