--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,14 @@ Perlってどんなプログラミング言語なの。Perlに対する純粋な
 
 <h3>Perlってどんなことが得意なの?</h3>
 
+<h3>Perlってどんなプログラミング言語?</h3>
+
+Perlは、どんな特徴を持つプログラミング言語なのでしょうか。
+
+<ul>
+  <li><a href="/blog/20190911130832.html">Perlは値と参照を明確に区別する</a>
+</ul>
+
 <h3>Perlに対する誤解に答える</h3>
 
 Perlは、非常に誤解されている言語です。
