--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,12 @@ Perlってどんなプログラミング言語なの。Perlに対する純粋な
 
 <h3>Perlってどんなプログラミング言語?</h3>
 
+<h4>Perlはどんな言語を参考にしているの?</h4>
+
+<ul>
+  <li><a href="/blog/20190920082045.html">Perlのインクリメント/デクリメントの動作はC言語と同じ</a></li>
+</ul>
+
 Perlは、どんな特徴を持つプログラミング言語なのでしょうか。
 
 <ul>
