Perlの正規表現はsedの表現を取り入れたものを追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@ Perlってどんなプログラミング言語なの。Perlに対する純粋な
 
 <ul>
   <li><a href="/blog/20190920082045.html">Perlのインクリメント/デクリメントの動作はC言語と同じ</a></li>
+  <li><a href="/blog/20190924071341.html">Perlの正規表現はsedの表現を取り入れたもの</a></li>
 </ul>
 
 Perlは、どんな特徴を持つプログラミング言語なのでしょうか。
