ロゴ、ファビコン、デザイン調整

--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -1,4 +1,4 @@
 <!-- header -->
 <h1>
-  <a href="/">Perlの哲学 - Perlってどんなプログラミング言語なの</a>
+  <a href="/"><img src="/images/philosophi-logo.png" alt="Perlの哲学 - Perlに対する誤解を解く"></a>
 </h1>
