Perlのfor文は、C言語のfor文と、同一の文法

--- a/templates/blog/20190918081634.html
+++ b/templates/blog/20190918081634.html
@@ -1,4 +1,4 @@
-<h2>PerlでもマルチCPUを最大限に活用できる</h2>
+<h2>PerlでもマルチCPUを最大限に活用できる aaaa</h2>
 
 Perlでは、マルチCPU対応の方法を解説します。PerlではマルチCPU対応できないのではないかという誤解が、Web上には、たくさんあります。
 
