Perlのif文はC言語のif文に似ているを追加

--- a/templates/blog/20190920082045.html
+++ b/templates/blog/20190920082045.html
@@ -75,3 +75,12 @@ Perlは、C言語と親和性の高いプログラミング言語です。
 こういう議論に巻き込まれたら、素早くその場所を去った方がよいかもしれませんね。
 
 <b>それよりもむしろ、広く利用されているC言語の文法を、そのまま採用したPerlを再評価してみるのはいかがでしょう。</b>
+
+<h3>関連項目</h3>
+
+この記事では、Perlのインクリメント/デクリメントがC言語と似ているということを書きましたが、Perlのfor文やif文も、C言語と似ています。
+
+<ul>
+  <li><a href="/blog/20190926072429.html">Perlのif文はC言語のif文に似ている</a></li>
+  <li><a href="/blog/20190925080555.html">Perlのfor文は、C言語のfor文と、同一の文法</a></li>
+</ul>
