--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,28 @@ Perlってどんなプログラミング言語なの。Perlに対する純粋な
 
 <h3>Perlってどんなことが得意なの?</h3>
 
-<h3>Perlってどんなプログラミング言語?</h3>
 
-<h4>Perlはどんな言語を参考にしているの?</h4>
+<h3>Perlはどんな言語を参考にしているの?</h3>
+
+<h4>C言語</h3>
+
+PerlはC言語の機能を参考にしています。
 
 <ul>
   <li><a href="/blog/20190920082045.html">Perlのインクリメント/デクリメントの動作はC言語と同じ</a></li>
+  <li><a href="/blog/20190926072429.html">Perlのif文はC言語のif文に似ている</a></li>
   <li><a href="/blog/20190925080555.html">Perlのfor文は、C言語のfor文と、同一の文法</a></li>
+</ul>
+
+<h4>sed</h4>
+
+Perlはsedの機能を参考にしています。
+
+<ul>
   <li><a href="/blog/20190924071341.html">Perlの正規表現はsedの表現を取り入れたもの</a></li>
 </ul>
+
+<h3>Perlってどんなプログラミング言語?</h3>
 
 Perlは、どんな特徴を持つプログラミング言語なのでしょうか。
 
