--- a/templates/blog/20191001075312.html
+++ b/templates/blog/20191001075312.html
@@ -4,7 +4,7 @@ Perlの演算子とC言語の演算子は、種類が似ていて、演算子の
 
 <h4>Perlの演算子</h4>
 
-Perlの演算子です。C言語の演算子と同じもの、機能が似ているものを取り上げました。
+Perlの演算子です。C言語の演算子と同じものと、機能が似ているものを取り上げました。
 
 <pre>
 # 加算演算子
@@ -38,7 +38,7 @@ my $ret = $x != $y;
 
 # 論理演算子
 my $ret = $x && $y;
-my $RET = $X || $y;
+my $ret = $x || $y;
 my $ret = !$x;
 
 # 単項演算子
@@ -66,6 +66,9 @@ my $ret = $foo->{x};
 
 # もしアクセッサを定義すれば、上記は以下のように書ける
 my $ret = $foo->x;
+
+# 3項演算子
+my $ret = $flag ? $x : $y;
 </pre>
 
 <h4>C言語の演算子</h4>
@@ -89,10 +92,10 @@ int32_t ret = x / y;
 int32_t ret = x % y;
 
 // インクリメント/デクリメント
-int32_t $ret = ++$x;
-int32_t $ret = $x++;
-int32_t $ret = --$x;
-int32_t $ret = $x--;
+int32_t ret = ++x;
+int32_t ret = x++;
+int32_t ret = --x;
+int32_t ret = x--;
 
 // 数値の比較演算子
 int32_t ret = x > y;
@@ -117,29 +120,34 @@ int32_t ret = x << y;
 // 左シフト演算子
 int32_t ret = x >> y;
 
-# 代入演算子
-int32_t $ret = $x;
-int32_t $ret += $x;
-int32_t $ret -= $x;
-int32_t $ret *= $x;
-int32_t $ret /= $x;
-int32_t $ret %= $x;
-int32_t $ret >>= $x;
-int32_t $ret <<= $x;
+// 代入演算子
+int32_t ret = x;
+int32_t ret += x;
+int32_t ret -= x;
+int32_t ret *= x;
+int32_t ret /= x;
+int32_t ret %= x;
+int32_t ret >>= x;
+int32_t ret <<= x;
 
 // アロー演算子
 int32_t ret = foo->x;
+
+// 3項演算子
+int32_t ret = flag ? x : y;
 </pre>
 
 <h4>Perlの演算子とC言語の演算子の比較</h4>
 
-Perlの演算子の数値演算子、数値の比較演算子、単項演算子、論理演算子、シフト演算子、インクリメント/デクリメント、代入演算子は、C言語と機能が同じです。
+Perlの演算子の数値演算子、数値の比較演算子、単項演算子、論理演算子、シフト演算子、インクリメント/デクリメント、代入演算子、3項演算子は、C言語と機能が同じです。
 
 代入演算子は、式を返すという点でもC言語と同じです。代入文ではなく、代入式として評価されます。
 
 Perlのアロー演算子は、参照を通してフィールドにアクセスできるという点がC言語と似ています。
 
 アクセッサと呼ばれる、フィールドにアクセスするための、メソッドを定義してやると、Perlのフィールドアクセスと、C言語のフィールドアクセスは、値を取得する場合は、見た目が同じになります。
+
+C言語には3項演算子がありますが、Perlにも存在しています。条件に応じて、値を返すことのできる演算子です。
 
 <h4>Perlの演算子の優先順位</h4>
 
@@ -182,7 +190,7 @@ Perlの演算子の優先順位とC言語の演算子の優先順位の比較し
 
 Perlでは、C言語で覚えた、演算子の優先順位をほぼそのまま使うことができます。
 
-ある人たちは、バグが生まれやすいなど、C言語の演算子や演算子の優先順位に対して、事実を踏まえない、過剰な批判をします。
+C言語の演算子や演算子の優先順位に対して、バグが生まれやすいなど、事実に基づかない、過剰な批判をする人もいます。
 
 一方で、Perlは、C言語の演算子の優先順を、そのまま受け入れています。
 
