Perlの文字列比較演算子、eq,ne,gt,ge,lt,lは、シェルスクリプトの数値比較演算子が由来を追加

--- a/templates/blog/20191001075312.html
+++ b/templates/blog/20191001075312.html
@@ -4,7 +4,7 @@ Perlの演算子とC言語の演算子は、種類が似ていて、演算子の
 
 <h4>Perlの演算子</h4>
 
-Perlの演算子です。C言語の演算子と同じものと、機能が似ているものを取り上げました。
+Perlの演算子です。C言語の演算子と同じものと、機能が似ているものを取り上げました。加算演算子、減算演算子、減算演算子、減算演算子、剰余演算子、インクリメント/デクリメントなどの算術演算子、数値比較演算子、論理演算子、単項演算子、シフト演算子、アロー演算子、３項演算子を取り上げています。
 
 <pre>
 # 加算演算子
@@ -13,10 +13,10 @@ my $ret = $x + $y;
 # 減算演算子
 my $ret = $x - $y;
 
-# 乗算演算子
+# 減算演算子
 my $ret = $x * $y;
 
-# 除算演算子
+# 減算演算子
 my $ret = $x / $y;
 
 # 剰余演算子
@@ -73,7 +73,7 @@ my $ret = $flag ? $x : $y;
 
 <h4>C言語の演算子</h4>
 
-C言語の演算子です。
+C言語の演算子です。加算演算子、減算演算子、減算演算子、減算演算子、剰余演算子、インクリメント/デクリメントなどの算術演算子、数値比較演算子、論理演算子、単項演算子、シフト演算子、アロー演算子、３項演算子を取り上げています。
 
 <pre>
 // 加算演算子
