--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,11 @@ Perlのif文による条件分岐やfor文、while文による繰り返しなど
 
 <h4>シェルスクリプト</h4>
 
-Perlにはシェルスクリプトと同じ文法の変数展開の機能があります。
+Perlにはシェルスクリプトと同じ変数展開の機能があります。文字列比較演算子、eq,ne,gt,ge,lt,leは、シェルスクリプトのキーワードを借用しています。
 
 <ul>
   <li><a href="/blog/20191004074909.html">Perlの変数展開はシェルスクリプトの変数展開と同じ</a></li>
+  <li><a href="/blog/20191007074832.html">Perlの文字列比較演算子、eq,ne,gt,ge,lt,lは、シェルスクリプトの数値比較演算子が由来</a></li>
 </ul>
 
 <h4>sed</h4>
