なぜPerlの生まれや祖先に注目するのですか?を追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,14 @@ Perlと自然言語の比較を通して、Perlが自然言語から受け継い
   <li><a href="/blog/20190411130832.html">Perlが自然言語から受け継いだもの</a></li>
 </ul>
 
+<h4>総括</h4>
+
+C言語、シェルスクリプト、Lisp、Unix/Linuxコマンド、自然言語などのPerlが参考にしたものを紹介してきましたが、なぜこのことに注目するのでしょうか? 総括します。
+
+<ul>
+  <li><a href="/blog/20191018081530.html">なぜPerlの生まれや祖先に注目するのですか?</a></li>
+</ul>
+
 <h3>Perlってどんなことが得意なの?</h3>
 
 <h3>Perlってどんなプログラミング言語?</h3>
