--- a/templates/index.html
+++ b/templates/index.html
@@ -68,3 +68,10 @@ Perlは、非常に誤解されている言語です。
   <li><a href="/blog/20191021080540.html">Perlのプレインオールドを再評価する - 単純で古典的ということの価値</a></li>
   <li><a href="/blog/20191023071239.html">昔CGIで掲示板を作った方へ。CGIに代わるPerl Web開発手法のまとめ</a></li>
 </ul>
+
+<h3>Perlの未来へ向かって</h3>
+
+<ul>
+  <li><a href="/blog/20191028075625.html">データマーケティングの構想 - Data::Marketing</a></li>
+</ul>
+
