--- a/templates/index.html
+++ b/templates/index.html
@@ -69,6 +69,14 @@ Perlは、非常に誤解されている言語です。
   <li><a href="/blog/20191023071239.html">昔CGIで掲示板を作った方へ。CGIに代わるPerl Web開発手法のまとめ</a></li>
 </ul>
 
+<h3>動的型言語の利点</h3>
+
+Perlを始めとする動的型言語の利点を知ることで、静的型言語と適切な比較ができるようになります。
+
+<ul>
+  <li><a href="/blog/20200121094159.html">関数(サブルーチン)の引数を追加できるという動的型言語の利点</a></li>
+</ul>
+
 <h3>Perlの未来へ向かって</h3>
 
 <ul>
