Perlの起動速度はピカイチを追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,12 @@
 
 Perlってどんなプログラミング言語なの。Perlに対する純粋な疑問に答えます。
 
+<h3>Perlの強み</h3>
+
+<ul>
+  <li><a href="/blog/20200210114201.html">Perlの起動速度はピカイチ</a></li>
+</ul>
+
 <h3>Perlはどんな言語を参考にしているの?</h3>
 
 Perlは、C言語、シェルスクリプト、sed、awk、grepなどのUnxi/Linuxコマンド、Lisp、自然言語の特徴を組み合わせて設計されました。
