Perlは正規表現が言語に組み込まれているを追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@ Perlってどんなプログラミング言語なの。Perlに対する純粋な
 <h3>Perlの強み</h3>
 
 <ul>
+  <li><a href="/blog/20200211075143.html">Perlは正規表現が言語に組み込まれている</a></li>
   <li><a href="/blog/20200210114201.html">Perlの起動速度はピカイチ</a></li>
 </ul>
 
