--- a/templates/blog/20200302065144.html
+++ b/templates/blog/20200302065144.html
@@ -71,7 +71,7 @@ Perlには、文字列そのままを、配列にしてくれる<a href="https:/
 
 こんなのが、200行書かれていたと想像してください。クォートで囲って、カンマで、区切るのめんどうですよねぇ。
 
-そんなときは、文字列リスト演算子。
+「どらえもーん、なんかとからないのー。」「のびた君、また君かぁ。そんなときは、文字列リスト演算子(もじれつ りすと えんざんしー!)」
 
 <pre>
 my @foods = qw(
