--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@ Perlってどんなプログラミング言語なの。Perlに対する純粋な
 <ul>
   <li><a href="/blog/20200211075143.html">Perlは正規表現が言語に組み込まれている</a></li>
   <li><a href="/blog/20200210114201.html">Perlの起動速度はピカイチ</a></li>
+  <li><a href="/blog/20200402100626.html">Unix/Linuxサーバー管理とWebシステム開発をPerlで統合し業務効率化</a></li>
 </ul>
 
 <h3>Perlはどんな言語を参考にしているの?</h3>
