--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,7 @@ Perlは、非常に誤解されている言語です。
   <li><a href="/blog/20191023071239.html">昔CGIで掲示板を作った方へ。CGIに代わるPerl Web開発手法のまとめ</a></li>
   <li><a href="/blog/20200122080040.html">WindowsでPerlを使うべきではないというのは本当ですか?</a></li>
   <li><a href="/blog/20200823062341.html">Perlはレガシーですか? </a></li>
+  <li><a href="/blog/20200922082225.html">Webの誇大広告やステマなどの不正行為についてPerlが困っていることを教えてください</a></li>
 </ul>
 
 <h3>動的型言語の利点</h3>
