--- a/templates/blog/20191014081245.html
+++ b/templates/blog/20191014081245.html
@@ -66,3 +66,9 @@ sub foo {
 PerlとLispは、表面的な見た目は、まったく異なりますが、Perlは、人間が使いやすい用にLispに皮を被せたものだったのです。
 
 あらゆる動的言語は、この意味でLispから恩恵を受けているといって過言ではないでしょう。
+
+<h3>Lispを熱く語った動画を見る</h3>
+
+<ul>
+  <li><a href="https://www.youtube.com/watch?v=_qNPzPS68iI">Lispの偉大さを熱く語る - Perlプログラミングちゃんねる</a></li>
+</ul>
