--- a/templates/common/bottom.html
+++ b/templates/common/bottom.html
@@ -7,3 +7,11 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/KfvdD9ns-m0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </div>
+
+<div style="text-align:center;margin-top:30px;font-weight:bold;font-size:22px;">
+Perlの神髄であるPerlテキストプログラミングを学べる教材
+</div>
+<div style="text-align:center;margin-top:30px;">
+  <a href="https://www.perlri.com/book/perl_text_essense" rel="nofollow"><img src="https://tutorial.perlzemi.com/images/book/perl_text_essence.jpg" style="width:260px;margin:0 auto;"></a><br><a href="https://www.perlri.com/book/perl_text_essense" rel="nofollow" style="font-size:20px;">Perlテキスト処理のエッセンス発売中</a>
+
+</div>
