--- a/templates/common/side.html
+++ b/templates/common/side.html
@@ -1,9 +1,25 @@
 <!-- side -->
 <div class="side-list">
   <div class="side-list-title">
+    講座作成
+  </div>
+  <ul>
+    <li style="text-align:center;padding-left:0"><a href="http://www.perlri.com/"><img width="120" src="https://tutorial.perlzemi.com/images/kaeru_w_01.png"><br>Perl元気塾</a></li>
+  </ul>
+  <div class="side-list-title">
     目次
   </div>
   <ul>
     <li><a href="/list.html">記事の一覧</a></li>
+  </ul>
+  <div class="side-list-title" style="margin-top:30px;">
+    Perlテキスト処理のエッセンス
+  </div>
+  <ul>
+    <li style="text-align:center;">
+      <a rel="nofollow" href="https://www.perlri.com/book/perl_text_essense"><img src="https://tutorial.perlzemi.com/images/book/perl_text_essence.jpg" width="160"></a><br>
+      <a rel="nofollow" href="https://www.perlri.com/book/perl_text_essense">Perlテキスト処理のエッセンス</a><br>
+     Perlの神髄であるPerlテキストプログラミングを学べる教材
+    </li>
   </ul>
 </div>
