Perl嫌われる理由でSEO大作

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,12 @@
-<h2>Perlの哲学 - Perlに対する誤解を解きたい</h2>
+<h2>Perlの哲学 - Perlに嫌われる理由はありますか? Perlに対する誤解を解きたい</h2>
 
 Perlってどんなプログラミング言語なの。Perlに対する純粋な疑問に答えます。
+
+<h3>「Perl 嫌われる 理由」に対するGoogle検索エンジン対策コンテンツ</h3>
+
+<ul>
+  <li><a href="/blog/20200823062341.html">Perlが嫌われていると信じられている理由 - Perlはレガシーですか?</a></li>
+</ul>
 
 <h3>Perlの強み</h3>
 
@@ -86,7 +92,6 @@ Perlは、非常に誤解されている言語です。
   <li><a href="/blog/20191021080540.html">Perlのプレインオールドを再評価する - 単純で古典的ということの価値</a></li>
   <li><a href="/blog/20191023071239.html">昔CGIで掲示板を作った方へ。CGIに代わるPerl Web開発手法のまとめ</a></li>
   <li><a href="/blog/20200122080040.html">WindowsでPerlを使うべきではないというのは本当ですか?</a></li>
-  <li><a href="/blog/20200823062341.html">Perlはレガシーですか? </a></li>
   <li><a href="/blog/20200922082225.html">Webの誇大広告やステマなどの不正行為についてPerlが困っていることを教えてください</a></li>
 </ul>
 
