--- a/templates/blog/20200823062341.html
+++ b/templates/blog/20200823062341.html
@@ -1,6 +1,6 @@
-<h2>Perlはレガシーですか? </h2>
+<h2>Perlが嫌われていると信じられている理由 - Perlはレガシーですか? </h2>
 
-「Perlはレガシーですか? 」という質問に答えてみます。
+「Perlはレガシーですか? 」という質問に答えてみます。また「Perl 嫌われる 理由」で検索してきた方に対しても、語ります。最近(2021年7月1日～15日、表示はまだ継続中)はGoogle検索エンジンが「Perl 嫌われる 理由」で、Perlの関連キーワードのトップに上げてくるのです。日本で、検索エンジンシェアの92%のGoogleが、「Perl 嫌われる 理由」を、あらゆるキーワードの中で、最も関連性が高いものとして、公共のスペースに表示しました。
 
 <h3>Perlはなぜレガシーだと信じられているのでしょうか?</h3>
 
@@ -8,11 +8,19 @@
 
 おそらくそれをどこかの記事で読んだり、だれかから聞いたから、検索したはずです。
 
-自分がPerlという言語を試してみるにあたって「Perlなんて将来性があるの?」という不安があって、検索していませんか?
+自分がPerlという言語を試してみるにあたって「Perlなんて将来性があるの?」「Perlのトレンドは?」という不安があって、検索していませんか?
 
 Perlの側からは、悪い意味で、レガシーと表現したことはないので、それは、Perl以外のユーザーが広めたものです。
 
 Perlはオワコン、Perlは古い、Perlはもう終わりといった表現も多用されてきました。
+
+<h3>Perlが嫌われていると信じられている理由</h3>
+
+最近(2021年7月1日～15日、表示はまだ継続中)はGoogle検索エンジンが「Perl 嫌われる 理由」で、Perlの関連キーワードのトップに上げてくるのです。検索エンジンシェアの92%のGoogleが、「Perl 嫌われる 理由」を、あらゆるキーワードの中で、最も関連性が高いものとして、公共のスペースに表示しました。
+
+Googleの検索エンジンアルゴリズムが、Perlに対して、偏見をさらに助長するように、働いています。Googleの検索エンジンアルゴリズムは、汎用的なものなので、他のキーワードに対しても適用され、これがもし「○○人 嫌われる 理由」であれば、ヤバイです。
+
+Perlが嫌われていると信じられている理由は、以下で記述します。
 
 <h3>Perlは現代的な動的型言語のオリジナル</h3>
 
@@ -86,7 +94,15 @@ Perlは優れていたために、Perlを否定するためには、ネガティ
 
 「〇〇言語は、学ぶべき言語～、Perlはもう学ぶべきではない言語～」
 
-「今は〇〇言語ですよ。Perlユーザーは2020年には、いなくなっていますよ」
+ひろゆき「今は〇〇言語ですよ。Perlユーザーは2020年には、いなくなっていますよ」
+
+「Perlを書かされるのは刑務所」
+
+「Perlを学び始めるには、エクスタシー(ドラッグ)をまずやらないと、いけません。」
+
+「無慈悲に滅ぼすべしPerl」
+
+Stack Overflow「2017年、嫌われているプログラミングランキング1位 Perl」(どうして質問サイトが、こんなヘイトを生み出すアンケートを実施しているの?)
 
 数多くのPerlに対するネガティブな印象操作キャンペーンが広く行われてきました。
 
