嫌われる理由に追加

--- a/templates/blog/20200823062341.html
+++ b/templates/blog/20200823062341.html
@@ -104,7 +104,15 @@ Perlは優れていたために、Perlを否定するためには、ネガティ
 
 Stack Overflow「2017年、嫌われているプログラミングランキング1位 Perl」(どうして質問サイトが、こんなヘイトを生み出すアンケートを実施しているの?)
 
-数多くのPerlに対するネガティブな印象操作キャンペーンが広く行われてきました。
+「TIOBE Perl過去最低順位」(TIOBEランキング攻略を広範囲でやって、検索結果を汚せば、高順位を獲得できます。)
+
+「Perlは悪夢。」
+
+「Perlは癌。」
+
+「Perlコア開発チームは、Perlを自殺に追いやっているヒ素のような存在。」
+
+人間の心の環境を汚す、数多くのPerlに対するネガティブな印象操作キャンペーンが広く行われてきました。
 
 <h4>ネガティブキャンペーンはだれが主導しているか</h4>
 
