--- a/templates/common/side.html
+++ b/templates/common/side.html
@@ -4,21 +4,12 @@
     講座作成
   </div>
   <ul>
-    <li style="text-align:center;padding-left:0"><a href="http://www.perlri.com/"><img width="110" src="https://tutorial.perlzemi.com/images/kaeru_w_01.png"><br>Perl元気塾</a></li>
+    <li style="text-align:center;padding-left:0"><a href="http://www.perlri.com/"><img width="110" src="https://tutorial.perlzemi.com/images/kaeru_w_01.png"><br>プログラミングスクール<br>Perl元気塾</a></li>
   </ul>
   <div class="side-list-title">
     目次
   </div>
   <ul>
     <li><a href="/list.html">記事の一覧</a></li>
-  </ul>
-  <div class="side-list-title" style="margin-top:30px;">
-    Perlテキスト処理のエッセンス
-  </div>
-  <ul>
-    <li style="text-align:center;">
-      <a href="https://www.perlri.com/book/perl_text_essense"><img alt="テキスト処理" src="https://tutorial.perlzemi.com/images/book/perl_text_essence.jpg" width="160"></a><br>
-      <a href="https://www.perlri.com/book/perl_text_essense">Perlテキスト処理のエッセンス</a><br>
-    </li>
   </ul>
 </div>
