Perl元気塾の講座としてのタイトル修正

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
-<h2>Perlの哲学 - Perlに嫌われる理由はありますか? Perlに対する誤解を解きたい</h2>
+<h2>Perl元気塾のPerl哲学講座</h2>
 
-Perlってどんなプログラミング言語なの。Perlに対する純粋な疑問に答えます。
+Perlの哲学は、Perl元気塾のPerlの哲学を知るための講座です。Perlは、誤解されて語られていることが、とても多いプログラミング言語です。誤解されて語られている理由は? Perlってどんなプログラミング言語なの。Perlに対する純粋な疑問に答えます。
 
 <h3>「Perl 嫌われる 理由」に対するGoogle検索エンジン対策コンテンツ</h3>
 
