--- a/templates/common/side.html
+++ b/templates/common/side.html
@@ -6,6 +6,9 @@
   <ul>
     <li style="text-align:center;padding-left:0"><a href="http://www.perlri.com/"><img width="110" src="https://tutorial.perlzemi.com/images/kaeru_w_01.png"><br>プログラミングスクール<br>Perl元気塾</a></li>
   </ul>
+</div>
+
+<div class="side-list">
   <div class="side-list-title">
     目次
   </div>
