--- a/templates/common/side.html
+++ b/templates/common/side.html
@@ -1,10 +1,10 @@
 <!-- side -->
 <div class="side-list">
   <div class="side-list-title">
-    講座作成
+    Perlクラブ
   </div>
   <ul>
-    <li style="text-align:center;padding-left:0"><a href="http://www.perlri.com/"><img width="110" src="https://tutorial.perlzemi.com/images/kaeru_w_01.png"><br>初心者からはじめて<br>プロのWeb開発者<br>になれる講座なら<br>Perl元気塾</a></li>
+    <li style="text-align:center;padding-left:0"><a href="http://www.perlri.com/"><img width="110" src="https://tutorial.perlzemi.com/images/kaeru_w_01.png"><br>ゆとりあるエンジニアライフを創造中<br>Perlクラブ</a></li>
   </ul>
 </div>
 
