--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,6 @@
-<h2>Perl元気塾のPerl哲学講座</h2>
+<h2>Perlの哲学 - Perlへの誤解を解きたい</h2>
 
 Perlの哲学は、Perl元気塾のPerlの哲学を知るための講座です。Perlは、誤解されて語られていることが、とても多いプログラミング言語です。誤解されて語られている理由は? Perlってどんなプログラミング言語なの。Perlに対する純粋な疑問に答えます。
-
-<h3>「Perl 嫌われる 理由」に対するGoogle検索エンジン対策コンテンツ</h3>
-
-<ul>
-  <li><a href="/blog/20200823062341.html">Perlが嫌われていると信じられている理由 - Perlはレガシーですか?</a></li>
-</ul>
 
 <h3>Perlの強み</h3>
 
