Perlの哲学をリニューアル

--- a/templates/common/side.html
+++ b/templates/common/side.html
@@ -1,18 +1,53 @@
-<!-- side -->
-<div class="side-list">
-  <div class="side-list-title">
-    Perlクラブ
+<div class="side_list">
+  <div class="side_list_title">
+    Perlテキスト処理のエッセンス
   </div>
-  <ul>
-    <li style="text-align:center;padding-left:0"><a href="http://www.perlri.com/"><img width="110" src="https://tutorial.perlzemi.com/images/kaeru_w_01.png"><br>ゆとりあるエンジニアライフを創造中<br>Perlクラブ</a></li>
-  </ul>
+  <div class="side_list_body">
+    <ul>
+      <li>
+        <div class="side_list_image">
+          <a rel="nofollow" href="https://perlri.com/book/perl_text_essense"><img src="https://perlri.com/images/book/perl_text_essence/perl_text_essence.jpg"></a>
+        </div>
+        <div class="side_list_description">
+          <div >初級者向け・テキスト処理と正規表現の基本をマスター</div>
+        </div>
+      </li>
+    </ul>
+  </div>
 </div>
 
-<div class="side-list">
-  <div class="side-list-title">
-    目次
+<div class="side_list">
+  <div class="side_list_title">
+    業務に役立つPerl
   </div>
-  <ul>
-    <li><a href="/list.html">記事の一覧</a></li>
-  </ul>
+  <div class="side_list_body">
+    <ul>
+      <li>
+        <div class="side_list_image">
+          <a  rel="nofollow" href="https://perlri.com/book/perl_gyoumu"><img src="https://perlri.com/images/book/perl_gyoumu/perl_gyoumu.jpg"></a>
+        </div>
+        <div class="side_list_description">
+          実務者向け・ログ解析など日本語を含むテキスト処理の実践!
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<div class="side_list">
+  <div class="side_list_title">
+    Perlクラブ
+  </div>
+  <div class="side_list_body">
+    <ul>
+      <li>
+        <div class="side_list_image">
+          <a rel="nofollow" href="http://perlri.com/"><img style="width:130px" src="https://perlri.com/images/perl_club_logo.png"></a>
+        </div>
+        <div class="side_list_description">
+          仲間と出会い<br>ゆとりあるエンジニアライフを送る
+        </div>
+      </li>
+    </ul>
+  </div>
 </div>
