--- a/templates/common/bottom.html
+++ b/templates/common/bottom.html
@@ -1,9 +1,3 @@
-<!-- bottom -->
-
-<h3>Perlの哲学のご紹介</h3>
-
-<div class="youtube_block">
-  <div class="youtube">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/KfvdD9ns-m0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
+<div class="perlclub_register">
+  <a rel="nofollow" href="https://perlri.com/account/create">Perlクラブへの<br>無料の会員登録で<br>書籍サンプルプレゼント</a>
 </div>
