--- a/templates/common/footer.html
+++ b/templates/common/footer.html
@@ -1,8 +1,10 @@
 <div class="perlri_link">
-  <a href="http://www.perlri.com">
-    ゆとりある<br>エンジニアライフを創造中<br>Perlクラブ
+  <a rel="nofollow" href="http://perlri.com">
+    仲間と出会い<br>ゆとりあるエンジニアライフを送る<br>Perlクラブ
   </a>
 </div>
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4525414114581084"
      crossorigin="anonymous"></script>
+     
+ 
