--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -1,4 +1,8 @@
-<!-- header -->
-<h1>
-  <a href="/"><img src="/images/philosophi-logo.png" alt="Perlの哲学 - Perlに対する誤解を解く"></a>
-</h1>
+<div class="header_main">
+  <h1>
+    <a href="/"><img src="/images/logo.png">Perlの哲学</a>
+  </h1>
+  <div class="header_right">
+    <a rel="nofollow" href="https://perlri.com/account/create">会員登録</a>
+  </div>
+</div>
