--- a/templates/common/meta.html
+++ b/templates/common/meta.html
@@ -2,4 +2,4 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 <link rel="stylesheet" type="text/css" href="/css/common.css">
-<link rel="shortcut icon" href="/images/philosophi-favicon.png">
+<link rel="shortcut icon" href="/images/logo.png">
