LinuxのURLを最新のものへ

--- a/templates/blog/20201026082415.html
+++ b/templates/blog/20201026082415.html
@@ -1,6 +1,6 @@
 <h2>Perlの文字列リテラルはUnix/Linuxシェルのシングルクォートとダブルクォートと似たように機能する</h2>
 
-Perlがシェルフレンドリーなひとつの理由として、Perlの文字列リテラルは<a href="https://linux.perlzemi.com/">Unix/Linuxシェル</a>のシングルクォートとダブルクォートと似たように機能することがあげられます。
+Perlがシェルフレンドリーなひとつの理由として、Perlの文字列リテラルは<a href="https://linux.perlclub.net/">Unix/Linuxシェル</a>のシングルクォートとダブルクォートと似たように機能することがあげられます。
 
 <h3>シングルクォート文字列</h3>
 
