PerlゼミのURLを最新のものへ

--- a/templates/blog/20190918081634.html
+++ b/templates/blog/20190918081634.html
@@ -60,7 +60,7 @@ Perlは、Unix/Linuxのフォーク機能を使用し、プリフォークを実
 
 計算資源を最大限に使うためには、GPUやCPUといったハードウェアレベルの最適化が必要になってきます。
 
-Perlでは、<a href="https://tutorial.perlzemi.com/blog/20100809127859.html">XSというC/C++による言語拡張機能</a>を使えば、C/C++やGPUを記述するためのC風の言語を使って、ハードウェアによる並列処理を実行できます。
+Perlでは、<a href="https://perlzemi.com/blog/20100809127859.html">XSというC/C++による言語拡張機能</a>を使えば、C/C++やGPUを記述するためのC風の言語を使って、ハードウェアによる並列処理を実行できます。
 
 <b>Perlレベルでは、シングルスレッドですが、C/C++レベルで記述を行うと、CPUやGPUなどのハードウェアの並列機能を最大限に活用することができます。</b>
 
