アナリティクスタグ、動画リンク、google codeプリティファイを追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 
 Perlの哲学は、Perl的な考え方を知るための講座です。Perlは、誤解されて語られていることが、とても多いプログラミング言語です。誤解されて語られている理由は? Perlってどんなプログラミング言語なの。Perlに対する純粋な疑問に答えます。
 
+<ul>
+  <li><a href="https://www.youtube.com/watch?v=KfvdD9ns-m0">動画紹介</a></li>
+</ul>
+
 <h3>Perlの強み</h3>
 
 <ul>
