--- a/templates/blog/20190924071341.html
+++ b/templates/blog/20190924071341.html
@@ -22,7 +22,7 @@ sed 's/foo/bar/g'
 
 <h3>Perlはsedの表現を参考にしている</h3>
 
-Perlというプログラミング言語のひとつの利点は、<a href="https://linux.perlclub.net/">Linux</a>/Unixで学んだものが、表現が概念をそのままPerlで、使えるということです。
+Perlというプログラミング言語のひとつの利点は、<a href="https://linux.perlzemi.com/">Linux</a>/Unixで学んだものが、表現が概念をそのままPerlで、使えるということです。
 
 <b>Perlの置換の正規表現の場合も、Linux/Unixで慣れ親しんだsedコマンドの使い方を知っていれば、それをそのままPerlプログラミングで使うことができます。</b>
 
