--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,12 @@
 
 Perlの哲学は、Perl的な考え方を知るための講座です。Perlは、誤解されて語られていることが、とても多いプログラミング言語です。誤解されて語られている理由は? Perlってどんなプログラミング言語なの。Perlに対する純粋な疑問に答えます。
 
+<h3>Perlの正規表現の採用事例</h3>
+
+<ul>
+  <li><a href="/blog/20220716072931.html">Linuxのgrepの「-P」オプションでPerlの正規表現が使える</a></li>
+</ul>
+
 <h3>Perlの利点</h3>
 
 <ul>
