--- a/templates/blog/20220716072931.html
+++ b/templates/blog/20220716072931.html
@@ -1,6 +1,6 @@
-<h2>Linuxのgrepの「-P」オプションでPerlの正規表現が使える</h2>
+<h2>Linuxのgrepの「-P」オプションでPerlの正規表現が使えるのを知っていましたか?</h2>
 
-Perlの正規表現は<a href="https://linux.perlzemi.com/">Linux</a>の<a href="https://linux.perlzemi.com/blog/20200602093211.html">grep</a>の「-P」オプションで利用できます。
+Perlの正規表現は<a href="https://linux.perlzemi.com/">Linux</a>の<a href="https://linux.perlzemi.com/blog/20200602093211.html">grep</a>の「-P」オプションに採用されています。
 
 Linuxのgrepコマンドの「-P」オプションで、Perlの正規表現をgrepで使えます。
 
