--- a/templates/blog/20220728064207.html
+++ b/templates/blog/20220728064207.html
@@ -4,6 +4,6 @@ AppleのMac OSでPerlが採用されているのをご存じでしたか? ター
 
 <a href="https://perlzemi.com/blog/20180814153419.html">macOSへのPerlのインストール - Perlゼミ</a>
 
-<quotemeta>
+<blockquote>
 macOSの環境には、すでにPerlがインストールされています。
-</quotemeta>
+</blockquote>
